Added avatar capabilities, very simple at the moment, see TODO. Only the correct signed in user can edit their profile now.

--- a/TODO
+++ b/TODO
@@ -1,3 +1,11 @@
+- need to add avatar upload in edit page
+ 
+- need to edit and seperate edit page in general
+
 - have country selection generate states --> counties
 
 - add more interests
+
+- work on new collaborations, editing collaborations, etc...
+
+- home page with matches
