--- a/TODO
+++ b/TODO
@@ -1,4 +1,6 @@
-- need to add avatar upload in edit page
+- need to add avatar upload in edit page (show avatar if one is uploaded)
+
+- no need for password when updating profile (unless updating password)
  
 - need to edit and seperate edit page in general
 
